Aqui para gato mojados

--- a/gatomojado.html
+++ b/gatomojado.html
@@ -7,11 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hola Wenos Dias</h1>
-
-    <p>MeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeow</p>
     
-    <a href="gatomojado.html">Aqui para Gatos mojados</a>
+    <h1>All for Cat</h1>
+
+    <p>MeoiMeoiMeoiMeoiMeoiMeoiMeoiMeoiMeoiMeoiMeoi</p>
+
+    
+
+
+
 
 </body>
 </html>
