--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     
     <a href="gatomojado.html">Aqui para Gatos mojados</a>
 
+    <a href="gatosmiones.html">Aqui para Gatos Miones</a>
+
 </body>
 </html>
