--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<link rel="stylesheet" href="hoja.css">
 <body>
     <h1>Hola Wenos Dias</h1>
 
     <p>MeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeowMeow</p>
     
     <a href="gatomojado.html">Aqui para Gatos mojados</a>
-
-    <a href="gatosmiones.html">Aqui para Gatos Miones</a>
 
 </body>
 </html>
